[code] Add login and authentication for each request.
Sign and issue jwt token through cookie to support login.
Add authentication for createProduct as example.

--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,12 @@
   },
   "homepage": "https://github.com/anaanas/anaanas#readme",
   "dependencies": {
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.4.0",
     "mongodb": "^3.1.10"
+  },
+  "devDependencies": {
+    "body-parser": "^1.18.3"
   }
 }
