--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "mongodb": "^3.1.10"
   },
   "devDependencies": {
-    "body-parser": "^1.18.3"
+    "body-parser": "^1.18.3",
+    "n": "^2.1.12"
   }
 }
