--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,9 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
-    "mongodb": "^3.1.10"
+    "mongodb": "^3.1.10",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.2"
   },
   "devDependencies": {
     "body-parser": "^1.18.3",
